@@ -1,6 +1,7 @@
 Revision history for Perl extension Geo::GDAL::FFI
 
 0.12 unreleased
+    - Package is now thread-safe.
 
 0.11 December 19, 2023
     - Removed use of to FFI::Platypus::Declare, now discouraged.
